fix contrast error text colour

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -220,7 +220,7 @@ nav {
 }
 
 .stat-item p {
-  color: #888888;
+  color: #595959;
   font-size: 16px;
 }
 
